--- a/src/components/common/headers/header.module.scss
+++ b/src/components/common/headers/header.module.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: start;
   align-items: center;
+  height: 8rem;
 
   .logo {
     -webkit-user-drag: none;
