--- a/src/components/doctor-info/doctorInfo.module.scss
+++ b/src/components/doctor-info/doctorInfo.module.scss
@@ -1,1 +1,61 @@
-// doctorInfo.module.scss
+.container {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem 0;
+
+  .topBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin: 2rem 0 4rem 0;
+
+    .engTitle {
+      font-size: 2em;
+      font-weight: 700;
+      color: #70605a;
+      font-family: 'Cormorant Garamond', serif;
+    }
+
+    .koTitle {
+      font-size: 1.6em;
+      font-weight: 700;
+    }
+
+    .hr {
+      width: 5rem;
+      border: 1.6px solid #a89f99;
+    }
+  }
+
+  .doctorInfos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    padding-bottom: 6rem;
+  }
+
+  .comment {
+    width: 100%;
+    height: 10rem;
+    background-image: url('public/doctor-info/doctor_info_bg.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-family: 'MaruBuriOTF', serif;
+    font-weight: 700;
+  }
+}
