--- a/src/components/route-to-come/routeToCome.module.scss
+++ b/src/components/route-to-come/routeToCome.module.scss
@@ -1,1 +1,75 @@
 // routeToCome.module.scss
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 60px;
+  width: 100%;
+  height: 40rem;
+  background: #9f9f9f; //페이지 구분을 위한 임시 배경 색상
+  padding: 100px 80px;
+
+  .map {
+    flex: 1;
+    max-width: 50%;
+    height: 500px;
+    background: #d9d9d9;
+    border-radius: 34px;
+  }
+
+  .title {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    h2 {
+      font-size: 28px;
+      font-weight: bold;
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .location {
+      font-size: 18px;
+      line-height: 1.6;
+      color: #555;
+    }
+  }
+
+  .operation {
+    margin-top: 30px;
+
+    h3 {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+
+    .operationInfo {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #444;
+    }
+
+    .alert {
+      margin-top: 8px;
+      font-size: 14px;
+      color: #b33;
+    }
+  }
+
+  .park {
+    margin-top: 30px;
+
+    h3 {
+      font-size: 20px;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    .parkInfo {
+      font-size: 16px;
+      color: #444;
+    }
+  }
+}
