[Style] #4 - 전역 이미지 드래그 불가능하게

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,10 @@
   font-style: normal;
   font-display: swap;
 }
+
+img {
+  -webkit-user-drag: none;
+  -moz-user-drag: none;
+  -ms-user-drag: none;
+  user-drag: none;
+}
