--- a/src/components/equipment-info/equipmentInfo.module.scss
+++ b/src/components/equipment-info/equipmentInfo.module.scss
@@ -1,1 +1,49 @@
 // equipmentInfo.module.scss
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 2rem 0 10rem 0;
+
+  .titleText {
+    font-size: 2em;
+    font-weight: 700;
+    color: #70605a;
+    font-family: 'Cormorant Garamond', serif;
+  }
+
+  .buttonBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8rem;
+  }
+
+  .equipmentInfo {
+    height: 22rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.8rem;
+
+    .equipmentBoxes {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.4rem;
+    }
+  }
+
+  .equipmentImage {
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+  }
+}
