--- a/src/components/hospital-picture/hospitalPicture.module.scss
+++ b/src/components/hospital-picture/hospitalPicture.module.scss
@@ -1,1 +1,64 @@
-// hospitalPicture.module.scss
+.container {
+  width: 100%;
+  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff5f0;
+
+  .content {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    .textArea {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 1rem;
+
+      .titleBox {
+        font-size: 3em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        color: #70605a;
+        font-family: 'Cormorant Garamond', serif;
+        font-weight: 800;
+      }
+
+      .subTitle {
+        font-size: 2em;
+        font-weight: 400;
+      }
+
+      .descBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        color: #787878;
+        font-size: 1.2em;
+        font-weight: 400;
+      }
+    }
+
+    .slider {
+      width: 45%;
+      height: 18rem;
+      margin: 0 auto;
+      object-fit: cover;
+
+      img {
+        width: 100%;
+        height: 23rem;
+        object-fit: cover;
+      }
+    }
+  }
+}
