--- a/src/components/route-to-come/routeToCome.module.scss
+++ b/src/components/route-to-come/routeToCome.module.scss
@@ -11,7 +11,7 @@
 
   .map {
     flex: 1;
-    max-width: 50%;
+    width: 50%;
     height: 500px;
     background: #d9d9d9;
     border-radius: 34px;
