[Style] #19 - 기타 레이아웃 수정

--- a/src/components/doctor-info/doctorInfo.module.scss
+++ b/src/components/doctor-info/doctorInfo.module.scss
@@ -1,11 +1,10 @@
 .container {
-  padding: 1rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 4rem 0;
+  padding-top: 4rem;
 
   .topBox {
     display: flex;
