--- a/src/components/hospital-picture/hospitalPicture.module.scss
+++ b/src/components/hospital-picture/hospitalPicture.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 50rem;
+  min-height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,8 +50,6 @@
 
     .slider {
       width: 45%;
-      height: 18rem;
-      margin: 0 auto;
       object-fit: cover;
 
       img {
