--- a/src/components/common/headers/header.module.scss
+++ b/src/components/common/headers/header.module.scss
@@ -5,6 +5,12 @@
   justify-content: start;
   align-items: center;
   height: 8rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
   .logo {
     -webkit-user-drag: none;
@@ -19,8 +25,18 @@
     align-items: center;
 
     .link {
+      width: 5rem;
+      text-align: center;
       text-decoration: none;
       color: #70605a;
+      padding: 1rem;
+    }
+
+    .active {
+      width: 5rem;
+      border-bottom: 4px solid #70605a;
+      padding: 1rem;
+      transition: border-bottom-color 0.5s ease-in-out;
     }
   }
 }
