[Fix] #19 - 헤더 선택 바 수정

--- a/src/components/common/headers/header.module.scss
+++ b/src/components/common/headers/header.module.scss
@@ -34,7 +34,8 @@
 
     .active {
       width: 5rem;
-      border-bottom: 4px solid #70605a;
+      font-weight: 700;
+      border-bottom: 3px solid #70605a;
       padding: 1rem;
       transition: border-bottom-color 0.5s ease-in-out;
     }
