--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,25 @@
 /* src/index.css 또는 src/App.css */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap");
 
 @font-face {
-  font-family: 'MaruBuriOTF';
-  src: url('/fonts/MaruBuri-ExtraLight.woff') format('woff');
+  font-family: "MaruBuriOTF";
+  src: url("/fonts/MaruBuri-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'MaruBuriOTF';
-  src: url('/fonts/MaruBuri-Regular.woff') format('woff');
+  font-family: "MaruBuriOTF";
+  src: url("/fonts/MaruBuri-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'MaruBuriOTF';
-  src: url('/fonts/MaruBuri-Bold.woff') format('woff');
+  font-family: "MaruBuriOTF";
+  src: url("/fonts/MaruBuri-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
