--- a/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
+++ b/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
@@ -1,14 +1,16 @@
 .container {
-  height: 20rem;
+  height: auto;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 3rem;
 
   img {
-    height: 100%;
+    height: 25rem;
+    border-radius: 1rem;
+    object-fit: cover;
   }
 
   .infos {
@@ -44,6 +46,38 @@
         font-size: 1em;
         font-weight: 400;
         margin: 1rem 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    height: auto;
+
+    img {
+      width: 80%;
+      height: auto;
+    }
+
+    .infos {
+      width: 90%;
+      align-items: center;
+      text-align: center;
+
+      .major,
+      .name,
+      .specialty {
+        font-size: 1.4em;
+      }
+
+      .subInfos {
+        .education,
+        .membership {
+          font-size: 0.9em;
+          line-height: 1.5;
+        }
       }
     }
   }
