[Feat] #6 오시는 길 페이지 주소 및 UI수정
주소 아이콘 하이퍼링크 수정 및 오시는 길 페이지 notice 수정

--- a/src/components/route-to-come/routeToCome.module.scss
+++ b/src/components/route-to-come/routeToCome.module.scss
@@ -87,9 +87,10 @@
     font-size: 18px;
   }
 
-  .notice {
-    margin-top: 0.5rem;
-    font-weight: 600;
-    color: #70605a;
-  }
+}
+
+.notice {
+  margin-top: 0.5rem;
+  font-weight: 600;
+  color: #be4718;
 }
