--- a/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
+++ b/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: flex-start;
   gap: 3rem;
+  margin-bottom: 4rem;
 
   img {
     height: 25rem;
@@ -46,6 +47,8 @@
         font-size: 1em;
         font-weight: 400;
         margin: 1rem 0;
+        line-height: 1.5;
+        white-space: normal;
       }
     }
   }
