--- a/src/components/hospital-picture/hospitalPicture.module.scss
+++ b/src/components/hospital-picture/hospitalPicture.module.scss
@@ -13,6 +13,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    gap: 3rem;
 
     .textArea {
       display: flex;
@@ -28,7 +29,7 @@
         justify-content: center;
         align-items: flex-start;
         color: #70605a;
-        font-family: 'Cormorant Garamond', serif;
+        font-family: "Cormorant Garamond", serif;
         font-weight: 800;
       }
 
