--- a/src/page/mainPage/mainpage.module.scss
+++ b/src/page/mainPage/mainpage.module.scss
@@ -1,7 +1,36 @@
+// .container {
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+// }
+
 .container {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
+
+  section {
+    width: 100%;
+    max-width: 1200px;
+    padding: 4rem 2rem;
+  }
+
+  @media (max-width: 1024px) {
+    section {
+      max-width: 900px;
+      padding: 3rem 1.5rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    section {
+      max-width: 100%;
+      padding: 2rem 1rem;
+    }
+  }
 }
