--- a/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
+++ b/src/components/doctor-info/doctor-component/doctorComponenet.module.scss
@@ -54,6 +54,25 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+
+    .infos {
+      width: 80%;
+      text-align: center;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    img {
+      width: 80%;
+      height: auto;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
