--- a/src/components/hospital-picture/hospitalPicture.module.scss
+++ b/src/components/hospital-picture/hospitalPicture.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: #fff5f0;
+  padding: 2rem 0;
 
   .content {
     width: 80%;
@@ -14,6 +15,7 @@
     justify-content: space-around;
     align-items: center;
     gap: 3rem;
+    max-width: 1400px;
 
     .textArea {
       display: flex;
@@ -21,6 +23,7 @@
       justify-content: center;
       align-items: flex-start;
       gap: 1rem;
+      flex: 1.2;
 
       .titleBox {
         font-size: 3em;
@@ -52,11 +55,77 @@
     .slider {
       width: 45%;
       object-fit: cover;
+      flex: 1;
 
       img {
         width: 100%;
         height: 23rem;
         object-fit: cover;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    min-height: 40rem;
+  }
+
+  .content {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+    .textArea {
+      width: 100%;
+      align-items: center;
+      text-align: center;
+
+      .titleBox {
+        font-size: 2.5em;
+        align-items: center;
+      }
+      .subTitle {
+        font-size: 1.5em;
+      }
+      .descBox {
+        align-items: center;
+      }
+    }
+
+    .slider {
+      width: 100%;
+      max-width: 500px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    min-height: auto;
+    padding: 3rem 0;
+  }
+
+  .content {
+    width: 90%;
+
+    .textArea {
+      .titleBox {
+        font-size: 2em;
+      }
+      .subTitle {
+        font-size: 1.2em;
+      }
+      .descBox {
+        font-size: 0.9em;
+      }
+    }
+
+    .slider {
+      img {
+        height: auto;
+        max-height: 20rem;
       }
     }
   }
