--- a/src/components/promise/promise.module.scss
+++ b/src/components/promise/promise.module.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url('/promise/gradation_background_img.png');
+  background-image: url("/promise/gradation_background_img.png");
 
   display: flex;
   flex-direction: column;
@@ -49,5 +49,36 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    height: auto;
+    min-height: 45rem;
+    gap: 3rem;
+
+    .circleBox {
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 2rem 1rem;
+
+    .textBox {
+      .titleImg {
+        width: 10rem;
+      }
+      .boldText {
+        font-size: 1.5em;
+      }
+      .subText {
+        gap: 1.5rem;
+      }
+    }
   }
 }
