--- a/src/components/route-to-come/routeToCome.module.scss
+++ b/src/components/route-to-come/routeToCome.module.scss
@@ -18,17 +18,18 @@
 }
 
 .map {
-  flex: 0 0 60%;
-  width: 700px;
+  flex-basis: 700px;
+  flex-shrink: 0;
+  min-height: 500px;
   background: #d9d9d9;
   border-radius: 20px;
 }
 
 .infoContainer {
   flex: 1;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
-  margin-left: 50px;
   color: #333;
 }
 
@@ -86,11 +87,56 @@
   p {
     font-size: 18px;
   }
-
 }
 
 .notice {
   margin-top: 0.5rem;
   font-weight: 600;
   color: #be4718;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 60px 40px;
+  }
+
+  .content {
+    flex-direction: column;
+    width: 100%;
+    max-width: 700px;
+    min-height: 400px;
+  }
+
+  .infoContainer {
+    width: 100%;
+    max-width: 700px;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 40px 20px;
+  }
+
+  .map {
+    min-height: 300px;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .address,
+  .tel,
+  .hours li,
+  .parking p {
+    font-size: 16px;
+  }
+
+  .hours h3,
+  .parking h3 {
+    font-size: 18px;
+  }
 }
