[Feat] #28 헤더 반응형처리

--- a/src/components/common/headers/header.module.scss
+++ b/src/components/common/headers/header.module.scss
@@ -41,3 +41,17 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .container {
+    justify-content: space-between;
+
+    .logo {
+      padding: 0 1.5rem;
+    }
+
+    .tabBox {
+      display: none;
+    }
+  }
+}
