--- a/src/components/equipment-info/equipmentInfo.module.scss
+++ b/src/components/equipment-info/equipmentInfo.module.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
+  padding: 4rem 2rem;
 
   .content {
     display: flex;
@@ -35,16 +35,18 @@
 
     .equipmentInfo {
       width: 100%;
-      height: 22rem;
+      height: 35rem;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      gap: 1rem;
+      gap: 4rem;
 
       .equipmentBoxes {
         height: 100%;
         display: flex;
+        width: flex;
+        flex-shrink: 0;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
