--- a/src/components/introduce/introduce.module.scss
+++ b/src/components/introduce/introduce.module.scss
@@ -52,7 +52,8 @@
 
       img {
         width: 100%;
-        height: auto;
+        height: 20rem;
+        object-fit: cover;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
